clusters/sirius/apps/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.36.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: storage
              mountPath: /srv
            - name: config
              mountPath: /config
            - name: settings-json
              mountPath: /config/settings.json
              subPath: settings.json
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          readinessProbe:
            exec:
              command: ["test", "-f", "/config/DONOTDELETE"]
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: storage
          nfs:
            server: 192.168.1.10
            path: /mnt/primary/root
            readOnly: false
        - name: config
          nfs:
            server: 192.168.1.10
            path: /mnt/primary/root/config/filebrowser
            readOnly: false
        - name: settings-json
          configMap:
            name: settings-json
      securityContext:
        fsGroup: 1000 # Ensures that the volume is accessible by the container user.
        # This is crucial for handling files owned by both root and user 1001
        # The container will run as user 1001 and group 1001, and fsGroup ensures
        # that it has appropriate access to the volume, regardless of the file owner.
        # Note: If you have files owned by other users, you may need a more flexible approach like using an init container or more complex volume mounting solutions.
---
